--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ There is also very little research on what models are actually learning when cla
     </li>
         <li> <!-- 9 -->
         <p>Small Convolutional network table</p>
-        <img src="static/table.png">
+        <img src="static/table.png" width="100%">
     </li>
 </ol>
 </body>
