--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body style="margin: 12px !important">
 <h1>Sono Acoustic Whale Detector</h1>
-
+<h2>Brandon Onyejekwe & Adrian Monaghan</h2>
 <h2>1) Introduction</h2>
 
 <p>
