Fix Paper hyperlink

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <h1>Sono Acoustic Whale Detector</h1>
 <h2>Brandon Onyejekwe & Adrian Monaghan</h2>
 <h2>1) Introduction</h2>
-
+<h3><a href="https://www.frontiersin.org/articles/10.3389/fmars.2021.607321/full">A Convolutional Neural Network for Automated Detection of Humpback Whale Song in a Diverse, Long-Term Passive Acoustic Dataset</a></h3>
 <p>
 Previous work in this field, including the paper we have based our work on, were mostly related to detecting and classifying biologic sound signatures from underwater acoustic microphones. The goal of our work is to try and classify whale calls, vessels, fish and background noise. Training to detect vessels proves to be a difficult problem with the given dataset due to the large imbalance between the relatively small number of vessels and fish, and the large proportion of whales and background noise. The initial paper also used a slightly modified version of the ResNet-50 model. We theorized that ResNet-50 was unnecessarily large for the classification task, so we experimented with smaller models to compare performance between them.
 </p>
